--- a/bank_app_test/android/app/src/main/AndroidManifest.xml
+++ b/bank_app_test/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bank_app_test">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="bank_app_test"
         android:icon="@mipmap/ic_launcher">
